# Python-test-repo

./: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: openai_credentials.py
src/testable_demo/: __init__.py  calculator.py  data_flow.py  http_client.py  legacy.py  security.py  strings.py
test-cases-himalay/externalimported/0308cd1f/: browser-history-navigation-post-logout.yaml  cross-browser-logout-consistency.yaml  logout-resilience-under-network-latency.yaml  multi-tab-session-termination.yaml  redirection-after-logout.yaml
test-cases-himalay/externalimported/8280e231/: checkbox-selection-persistence.yaml  initial-signup-with-valid-credentials.yaml  persistence-on-signup-page-after-duplicate-email-error.yaml  registration-with-duplicate-email-address.yaml  success-page-ui-and-navigation.yaml
test-cases-himalay/externalimported/943f9d4d/: direct-url-access-for-unauthenticated-users.yaml  mandatory-field-visibility-and-accuracy.yaml  manual-quantity-input-validation.yaml  navigation-to-product-detail-page.yaml  price-currency-formatting.yaml  quantity-decrement-functionality.yaml
test-cases-himalay/externalimported/9ce656ea/: prevention-of-raw-code-exposure-on-error.yaml  quantity-increment-functionality.yaml  rapid-interaction-stress-test.yaml  url-syntax-variations-and-normalization.yaml
test-cases-himalay/externalimported/d6cf2a62/: navigation-to-all-products-page.yaml  (+2 more)
tests/: test_calculator.py  test_data_flow.py  test_http_client.py  test_legacy.py  test_security.py  test_strings.py
(+23 files in other folders)
