[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testable-demo-python"
version = "1.0.0"
description = "Sample Python project for Testable whitebox metric validation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Testable Platform" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
branch = true
source = ["testable_demo"]

[tool.coverage.report]
fail_under = 80
show_missing = true
