[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testable-demo-python-dev"
version = "0.1.0-dev"
description = "Intentionally-broken Python project for Testable whitebox analyzer validation."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Testable Platform" }]
dependencies = [
    "requests==2.19.1",
    "urllib3==1.24.1",
    "pyyaml==5.1",
    "jinja2==2.10",
    "flask==1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["testable_demo"]

[tool.coverage.report]
show_missing = true
skip_empty = true
